post image overflow problem fix

--- a/sass/partials/_post.scss
+++ b/sass/partials/_post.scss
@@ -67,6 +67,7 @@
 		position: absolute;
 		top: 5%;
 		left: -6px;
+		z-index: 10;
 		padding: rhythm(0) rhythm(.25);
 		color: white;
 		@include adjust-font-size-to($font-size-S);
@@ -94,8 +95,16 @@
 		}
 	}
 	.post-photo {
+		position: relative;
+		overflow: hidden;
+		width: 100%;
+		height: 0;
+		padding-top: 56.5%;
 		text-align: center;
 		img {
+			position: absolute;
+			top:0;
+			left:0;
 			padding: 2.5%;
 			padding-bottom: 0;
 			width: 95%;
