--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -407,13 +407,13 @@ body.open-menu { height: 100%; }
 @media (min-width: 900px) { .post-item { width: 31.42857%; margin: 0 2.85714% 2.85714% 0; }
   .post-item:nth-child(2n) { margin-right: 2.85714%; }
   .post-item:nth-child(3n) { margin-right: 0; } }
-.post-item .post-tag { position: absolute; top: 5%; left: -6px; padding: 0px 6px; color: white; font-size: 13px; line-height: 24px; font-weight: bold; background-color: #880013; -webkit-box-shadow: 0px 1px 3px rgba(136, 0, 19, 0.5); -moz-box-shadow: 0px 1px 3px rgba(136, 0, 19, 0.5); box-shadow: 0px 1px 3px rgba(136, 0, 19, 0.5); -webkit-transform: skew(-7deg); -moz-transform: skew(-7deg); -ms-transform: skew(-7deg); -o-transform: skew(-7deg); transform: skew(-7deg); -webkit-transition: background, 0.25s; -moz-transition: background, 0.25s; -o-transition: background, 0.25s; transition: background, 0.25s; }
+.post-item .post-tag { position: absolute; top: 5%; left: -6px; z-index: 10; padding: 0px 6px; color: white; font-size: 13px; line-height: 24px; font-weight: bold; background-color: #880013; -webkit-box-shadow: 0px 1px 3px rgba(136, 0, 19, 0.5); -moz-box-shadow: 0px 1px 3px rgba(136, 0, 19, 0.5); box-shadow: 0px 1px 3px rgba(136, 0, 19, 0.5); -webkit-transform: skew(-7deg); -moz-transform: skew(-7deg); -ms-transform: skew(-7deg); -o-transform: skew(-7deg); transform: skew(-7deg); -webkit-transition: background, 0.25s; -moz-transition: background, 0.25s; -o-transition: background, 0.25s; transition: background, 0.25s; }
 .post-item .post-tag .first-word { font-size: 18px; line-height: 24px; }
 .post-item .post-sub { padding: 0 2.5%; color: #757570; font-size: 13px; line-height: 24px; font-weight: bold; }
 .post-item .post-title { padding: 0 2.5% 2.5%; font-size: 13px; line-height: 24px; white-space: nowrap; overflow: hidden; -ms-text-overflow: ellipsis; -o-text-overflow: ellipsis; text-overflow: ellipsis; }
 @media (min-width: 650px) { .post-item .post-title { font-size: 16px; line-height: 24px; } }
-.post-item .post-photo { text-align: center; }
-.post-item .post-photo img { padding: 2.5%; padding-bottom: 0; width: 95%; }
+.post-item .post-photo { position: relative; overflow: hidden; width: 100%; height: 0; padding-top: 56.5%; text-align: center; }
+.post-item .post-photo img { position: absolute; top: 0; left: 0; padding: 2.5%; padding-bottom: 0; width: 95%; }
 .post-item .post-preview { position: relative; height: 72px; padding: 2.5%; overflow: hidden; font-size: 13px; line-height: 24px; border-top: 1px solid #e7e7e5; }
 .post-item .post-preview:after { content: ""; position: absolute; height: 48px; bottom: 0; left: 0; right: 0; background: linear-gradient(to top, #f2f2ee 25%, rgba(242, 242, 238, 0) 100%); }
 
